--- a/styles.css
+++ b/styles.css
@@ -10,12 +10,23 @@ body {
 }
 
 #header {
-  padding: 10px 200px 150px 200px;
+  padding: 10px 0px 150px 0px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 #footer {
   text-align: center;
   padding: 25px;
+}
+
+#hero {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 20px;
+  max-width: 900px;
 }
 
 #hero > .left > .title {
@@ -25,23 +36,27 @@ body {
 }
 
 #hero > .left > .subtext,
-.links,
+.links > a,
 #footer {
   font-size: 18px;
   color: #e5e7eb;
+  text-decoration: none;
 }
 
 #logo {
   font-size: 24px;
   color: #f9faf8;
+  width: 480px;
 }
 
 #top {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  max-width: 900px;
   margin-bottom: 150px;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .links {
@@ -49,17 +64,115 @@ body {
   flex-direction: row;
   justify-content: space-between;
   gap: 20px;
+  flex-wrap: wrap;
 }
 
 button {
-  border-radius: 5px;
-}
-
-button,
-#section-three {
   background-color: #3882f6;
+  color: white;
+  height: 40px;
+  width: 130px;
+  border-radius: 10px;
+  border-color: #3882f6;
+  margin-top: 10px;
+  font-size: 16px;
 }
 
-#section-three > button {
-  border: 1px solid white;
+#sign-up-2 {
+  border-color: white;
+  flex: 1;
+}
+
+#hero > .right {
+  background-color: gray;
+  width: 900px;
+  height: 250px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+}
+
+#information-section > .title {
+  font-size: 36px;
+  font-weight: bolder;
+  color: #1f2937;
+  text-align: center;
+  margin: 30px;
+}
+
+#quote-section {
+  background-color: #e5e7eb;
+
+  padding: 50px;
+  display: flex;
+  justify-content: center;
+}
+
+#images {
+  display: flex;
+  flex-direction: row;
+  column-gap: 50px;
+  justify-content: center;
+  margin-bottom: 100px;
+}
+
+.image {
+  height: 150px;
+  width: 150px;
+  border: 4px solid #3882f6;
+  border-radius: 10px;
+  margin-bottom: 10px;
+}
+
+.image-container {
+  width: 150px;
+  text-align: center;
+}
+
+#quote {
+  max-width: 820px;
+  color: #1f2937;
+  font-size: 36px;
+}
+
+#quote-content {
+  font-weight: lighter;
+  font-style: italic;
+}
+
+#author {
+  text-align: right;
+  font-weight: bolder;
+}
+
+#action-section {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+#call-to-action {
+  max-width: 1200px;
+  background-color: #3882f6;
+  display: flex;
+  flex-direction: row;
+  margin: 100px 0px;
+  color: white;
+  align-items: center;
+  padding: 50px 100px;
+  gap: 100px;
+}
+
+#call-to-action > .left {
+  flex: 5;
+}
+
+#call-to-action > .left > .title {
+  font-size: 24px;
+  font-weight: bolder;
+}
+
+#call-to-action > .left > .subtext {
+  font-size: 18px;
 }
